--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ganache-cli": "^6.12.2",
     "mocha": "^10.0.0",
     "solc": "^0.4.17",
+    "truffle-hdwallet-provider": "^0.0.3",
     "web3": "^1.0.0-beta.26"
   }
 }
